<resources>
    <string name="app_name">Dashboard of Things</string>
    <string name="title_activity_maindash">Main dashboard</string>
    <string name="title_network_list">Networks</string>
    <string name="title_network_detail">Network details</string>
    <string name="title_network_addedit">Add/edit network</string>
    <string name="title_sensor_list">Sensors</string>
    <string name="title_sensor_detail">Sensor details</string>
    <string name="title_sensor_addedit">Add/edit sensor</string>
    <string name="title_actuator_list">Actuators</string>
    <string name="title_actuator_detail">Actuator details</string>
    <string name="title_actuator_addedit">Add/edit actuator</string>
    <string name="title_activity_map">Map</string>
    <string name="network">Network</string>
    <string name="sensor">Sensor</string>
    <string name="actuator">Actuator</string>
    <string name="main_navigation_dashboard">Main dashboard</string>
    <string name="main_navigation_networks">Networks</string>
    <string name="main_navigation_sensors">Sensors</string>
    <string name="main_navigation_actuators">Actuators</string>
    <string name="main_navigation_map">Map</string>
    <string name="menu_options">Options</string>
    <string name="menu_close_application_and_service">Shutdown application</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_reload">Reload</string>
    <string name="menu_ok">Ok</string>
    <string name="main_dashboard_tab_sensors">Sensors</string>
    <string name="main_dashboard_tab_actuators">Actuators</string>
    <string name="main_dashboard_tab_history">History</string>
    <string name="main_dashboard_tab_status">Status</string>
    <string name="main_dashboard_tab_logs">Logs</string>
    <string name="element_details_tab_details">Details</string>
    <string name="element_details_tab_logs">Logs</string>
    <string name="dialog_remove_network">Do you want to remove the selected network? All sensors and actuators related will be also removed.</string>
    <string name="dialog_remove_sensor">Do you want to remove the selected sensor? All history values received from this sensor will be also removed.</string>
    <string name="dialog_remove_actuator">Do you want to remove the selected actuator?</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="toolbar_title_network_loading">Loading network</string>
    <string name="toolbar_title_network_unrecognized">Unrecognized network</string>
    <string name="toolbar_title_new_network">New network</string>
    <string name="toolbar_title_edit_network">Editing network</string>
    <string name="toolbar_title_sensor_loading">Loading sensor</string>
    <string name="toolbar_title_sensor_unrecognized">Unrecognized sensor</string>
    <string name="toolbar_title_new_sensor">New sensor</string>
    <string name="toolbar_title_edit_sensor">Editing sensor</string>
    <string name="toolbar_title_actuator_loading">Loading actuator</string>
    <string name="toolbar_title_actuator_unrecognized">Unrecognized actuator</string>
    <string name="toolbar_title_new_actuator">New actuator</string>
    <string name="toolbar_title_edit_actuator">Editing actuator</string>
    <string name="toast_removing">Removing element ...</string>
    <string name="toast_remove_succesful">Element succesfully removed.</string>
    <string name="toast_remove_failed">Failed to remove element.</string>
    <string name="toast_updating">Updating element ...</string>
    <string name="toast_update_succesful">Element succesfully updated.</string>
    <string name="toast_update_failed">Failed to update element.</string>
    <string name="toast_creating">Creting element ...</string>
    <string name="toast_create_succesful">Element succesfully created.</string>
    <string name="toast_create_failed">Failed to create element.</string>
    <string name="toast_edition_failed">Failed to create element.</string>
    <string name="toast_sensor_reload_request_loading">Requesting the sensor to reload data ....</string>
    <string name="toast_sensor_reload_request_success">Reload of the sensor data requested to backend.</string>
    <string name="toast_sensor_reload_request_failed">Failed to request a reload of the sensor data.</string>
    <string name="toast_actuator_send_loading">Sending actuator data ...</string>
    <string name="toast_actuator_send_success">Sending of actuator data requested to backend.</string>
    <string name="toast_actuator_send_failed">Failed to send actuator data.</string>
    <string name="toast_actuator_printdata_error">Error preparing the data to be printed.</string>
    <string name="toast_create_first_network">Before creating a sensor or an actuator, you must create a network to link to it.</string>
    <string name="toast_map_failed">Failure at managing the map</string>
    <string name="toast_map_actuators_failed">Failed to load the actuators for the map</string>
    <string name="toast_map_sensors_failed">Failed to load the sensors for the map</string>
    <string name="loading">Loading ...</string>
    <string name="no_elements_in_list">There are no elements in the list shown.</string>
    <string name="error_in_list">There has been an error while loading the list. Check the logs for more info.</string>
    <string name="date_format_today">HH:mm</string>
    <string name="date_format_anotherday">dd/MM/yyyy</string>
    <string name="actuator_send_data">Send</string>
    <string name="actuator_integer_hint">Enter not decimal number here.</string>
    <string name="actuator_decimal_hint">Enter decimal number here.</string>
    <string name="actuator_string_hint">Enter string here.</string>
    <plurals name="error_log_number">
        <item quantity="one">%s warning or error log applied to this element</item>
        <item quantity="other">%s warning or error logs applied to this element</item>
    </plurals>
    <plurals name="error_log_number_short">
        <item quantity="one">%s problem</item>
        <item quantity="other">%s problems</item>
    </plurals>
    <string name="actuator_send_boolean_true">Activate</string>
    <string name="actuator_send_boolean_false">Deactivate</string>
    <string name="maindash_status_warning_message">This sensor, with %s as its last value, is in warning state.</string>
    <string name="maindash_status_critical_message">This sensor, with %s as its last value, is in critical state.</string>
    <string-array name="history_options_aray">
        <item>Last values</item>
        <item>Last day</item>
        <item>Last week</item>
        <item>Last month</item>
        <item>Last year</item>
    </string-array>
    <string name="no_data">-</string>
    <string name="no_data_value">No value available</string>
    <string name="two_elements_toghether">%s - %s</string>
    <string name="map_element_spinner">Name: %s; Type: %s</string>
    <string name="data_fancy_name">&lt;b>Name:&lt;/b> %s</string>
    <string name="data_fancy_type">&lt;b>Type:&lt;/b> %s</string>
    <string name="data_fancy_data_type">&lt;b>Data type:&lt;/b> %s</string>
    <string name="data_fancy_data_base_url">&lt;b>Connection URL:&lt;/b> %s</string>
    <string name="data_fancy_network_type">&lt;b>Network type:&lt;/b> %s</string>
    <string name="data_fancy_currentValue">&lt;b>Current value:&lt;/b></string>
    <string name="data_fancy_currentnetwork">&lt;b>Using network:&lt;/b> %s</string>
    <string name="data_fancy_datastate">&lt;b>Data state:&lt;/b> %s</string>
    <string name="data_fancy_history">&lt;b>History:&lt;/b></string>
    <string name="data_fancy_send_data">&lt;b>Send data:&lt;/b></string>
    <string name="boolean_active">Active</string>
    <string name="boolean_not_active">Not active</string>
    <string name="sensor_state_normal">Normal</string>
    <string name="sensor_state_warning">WARNING</string>
    <string name="sensor_state_critical">CRITICAL</string>
    <string name="network_type_mqtt">MQTT network</string>
    <string name="network_type_http">HTTP network</string>
    <string name="network_list_sensors">&lt;b>Sensors related:&lt;/b></string>
    <string name="network_no_sensors">&lt;b>No sensors related.&lt;/b></string>
    <string name="network_list_actuators">&lt;b>Actuators related:&lt;/b></string>
    <string name="network_no_actuators">&lt;b>No actuators related.&lt;/b></string>
    <string name="edit_label_general_variables">General options</string>
    <string name="edit_label_name">Name:</string>
    <string name="edit_hint_name_network">Name of the network</string>
    <string name="edit_hint_name_sensor">Name of the sensor</string>
    <string name="edit_hint_name_actuator">Name of the actuator</string>
    <string name="edit_label_type">Type:</string>
    <string name="edit_hint_type_network">Type of network:</string>
    <string name="edit_hint_type_sensor">Type of sensor</string>
    <string name="edit_hint_type_actuator">Type of actuator</string>
    <string-array name="edit_array_network_type">
        <item>HTTP network</item>
        <item>MQTT network</item>
    </string-array>
    <string name="edit_hint_image_pick">Pick an image</string>
    <string name="edit_hint_image_picked">Image picked</string>
    <string name="edit_label_http_variables">HTTP options</string>
    <string name="edit_label_http_baseurl">HTTP base URL:</string>
    <string name="edit_hint_http_baseurl">HTTP base URL of the network</string>
    <string name="edit_label_http_authentication">HTTP authentication type:</string>
    <string-array name="edit_array_network_http_authentication">
        <item>None</item>
        <item>HTTP basic authentication</item>
    </string-array>
    <string name="edit_label_http_auth_username">HTTP authentication username:</string>
    <string name="edit_hint_http_auth_username">Username to be used for authentication</string>
    <string name="edit_label_http_auth_password">HTTP authentication password:</string>
    <string name="edit_hint_http_auth_password">Password to be used for authentication</string>
    <string name="edit_label_http_use_ssl">Use TLS/SSL</string>
    <string name="edit_hint_http_cert_pick">Pick an HTTP SSL certificate</string>
    <string name="edit_hint_http_cert_picked">HTTP SSL certificate picked</string>
    <string name="edit_hint_mqtt_cert_pick">Pick an MQTT SSL certificate</string>
    <string name="edit_hint_mqtt_cert_picked">MQTT SSL certificate picked</string>
    <string name="edit_label_mqtt_variables">MQTT options</string>
    <string name="edit_label_mqtt_brokerurl">MQTT broker URL:</string>
    <string name="edit_hint_mqtt_brokerurl">MQTT broker URL of the network</string>
    <string name="edit_label_mqtt_clientid">MQTT client ID:</string>
    <string name="content_description_sensor_image">Image representing the sensor</string>
    <string name="content_description_sensor_name">Name of the sensor</string>
    <string name="content_description_sensor_type">Type of the sensor</string>
    <string name="content_description_actuator_name">Name of the actuator</string>
    <string name="content_description_actuator_type">Type of the actuator</string>
    <string name="content_description_refresh_data">Try to refresh sensor data</string>
    <string name="content_description_select_widget_sensor">Select the sensor for the widget</string>
    <string name="content_description_actuator_image">Image representing the actuator</string>
    <string name="content_description_network_image">Image representing the network</string>
    <string name="content_description_network_name">Name of the network</string>
    <string name="content_description_network_type">Type of the network</string>
    <string name="options_icon">⋮</string>
    <string name="widget_select_sensor">Sensor must be selected</string>
    <string name="widget_error_sensor">Error loading the sensor</string>
</resources>