<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <data>
        <import type="android.view.View"/>
        <variable
            name="network"
            type="com.arejas.dashboardofthings.domain.entities.extended.NetworkExtended" />
        <variable
            name="presenter"
            type="com.arejas.dashboardofthings.presentation.ui.activities.NetworkListActivity.NetworkElementOptionsListener" />
    </data>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:nextFocusRight="@id/tv_network_options_listitem">

        <ImageView
            android:id="@+id/iv_network_listitem"
            android:layout_width="@dimen/listitem_image_size"
            android:layout_height="@dimen/listitem_image_size"
            android:layout_margin="@dimen/detail_inner_margin_small"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_description_network_image"
            android:scaleType="centerCrop"
            app:imageUrl="@{network.imageUri}"
            app:errorResource="@{@drawable/error}"
            app:loadingResource="@{@drawable/loading}"
            app:alternativeResource="@{@drawable/picture}"
            app:layout_constraintEnd_toStartOf="@id/cl_network_info_listitem"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:src="@drawable/error" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_network_info_listitem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_inner_margin_small"
            android:layout_marginEnd="@dimen/detail_inner_margin_small"
            android:layout_marginBottom="@dimen/detail_inner_margin_small"
            app:layout_constraintStart_toEndOf="@id/iv_network_listitem"
            app:layout_constraintEnd_toStartOf="@id/tv_network_options_listitem"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/tv_network_name_listitem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/detail_inner_margin_extra_small"
                android:contentDescription="@string/content_description_network_name"
                app:elementName="@{network.name}"
                app:elementProblems="@{network.recentErrorLogs}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_network_type_listitem"
                style="@style/Theme.Dot.TextTitle"
                tools:text="Local network daskhjfalkds fjlkadsjflk adslkfajsdlkfjaldskjflkasdjf lkasdjflkadsj flakds fadsf"/>

            <TextView
                android:id="@+id/tv_network_type_listitem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/detail_inner_margin_small"
                android:contentDescription="@string/content_description_network_type"
                app:networkType="@{network.networkType}"
                app:elementProblems="@{network.recentErrorLogs}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_network_name_listitem"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/Theme.Dot.TextData"
                tools:text="NORMAL" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_network_options_listitem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/cl_network_info_listitem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/detail_inner_margin_small"
            android:paddingTop="@dimen/detail_inner_margin_small"
            android:paddingStart="@dimen/detail_inner_margin_big"
            android:paddingEnd="@dimen/detail_inner_margin_big"
            android:paddingBottom="@dimen/detail_inner_margin_small"
            android:text="@string/options_icon"
            android:textAppearance="?android:textAppearanceLarge"
            android:onClick="@{(v) -> presenter.optionsClicked(v)}"
            android:focusable="true"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    
</layout>